@@ -38,13 +38,16 @@ class PDO extends UseSharedObjects implements DBClass_Interface
     private $isFollowingTimezones;
     private $isSuppressDVOnCopy;
     private $isSuppressDVOnCopyAssoc;
+    private $isSuppressAuthTargetFillingOnCreate;
 
     public function __construct()
     {
-        $params = IMUtil::getFromParamsPHPFile(["followingTimezones", "suppressDefaultValuesOnCopy", "suppressDefaultValuesOnCopyAssoc",], true);
+        $params = IMUtil::getFromParamsPHPFile(["followingTimezones", "suppressDefaultValuesOnCopy",
+            "suppressDefaultValuesOnCopyAssoc","suppressAuthTargetFillingOnCreate",], true);
         $this->isFollowingTimezones = $params["followingTimezones"] ?? false;
         $this->isSuppressDVOnCopy = $params["suppressDefaultValuesOnCopy"] ?? false;
         $this->isSuppressDVOnCopyAssoc = $params["suppressDefaultValuesOnCopyAssoc"] ?? false;
+        $this->isSuppressAuthTargetFillingOnCreate = $params["suppressAuthTargetFillingOnCreate"] ?? false;
     }
 
     public function getUpdatedRecord()
@@ -769,7 +772,7 @@ class PDO extends UseSharedObjects implements DBClass_Interface
                 }
             }
         }
-        if (isset($tableInfo['authentication'])) {
+        if (isset($tableInfo['authentication']) && ! $this->isSuppressAuthTargetFillingOnCreate) {
             $authInfoField = $this->authHandler->getFieldForAuthorization("create");
             $authInfoTarget = $this->authHandler->getTargetForAuthorization("create");
             if ($authInfoTarget == 'field-user') {
